Remove end of line for rendered Strings and <p></p> for single line ones

--- a/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html
@@ -67,8 +67,7 @@
 
 			<h1>ClpWithMarkdownDocs **BETA**</h1>
 
-		<p class="lead"><p>Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
-</p>
+		<p class="lead">Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
 
 			<h3>Category
 				<small> markdown</small>
@@ -82,7 +81,6 @@
 <li>First element of list (<strong>bold</strong>)</li>
 <li>Second element of list (<em>italic</em>)</li>
 </ul>
-
 
 				<hr>
 				<h2>Command-line Arguments</h2>
@@ -108,8 +106,7 @@
 					</td>
 					<!--<td>String</td> -->
 					<td>""</td>
-					<td><p>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></p>
-</td>
+					<td>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></td>
 				</tr>
 				<tr>
 					<td><a href="#--DOUBLE">--DOUBLE</a><br />
@@ -117,8 +114,7 @@
 					</td>
 					<!--<td>double</td> -->
 					<td>0.0</td>
-					<td><p>This is an <code>double</code> argument with markdown formatted doc</p>
-</td>
+					<td>This is an <code>double</code> argument with markdown formatted doc</td>
 				</tr>
 				<tr>
 					<td><a href="#--INT">--INT</a><br />
@@ -126,8 +122,7 @@
 					</td>
 					<!--<td>int</td> -->
 					<td>0</td>
-					<td><p>This is an <code>int</code> argument with markdown formatted doc</p>
-</td>
+					<td>This is an <code>int</code> argument with markdown formatted doc</td>
 				</tr>
 				<tr>
 					<td><a href="#--italic">--italic</a><br />
@@ -135,8 +130,7 @@
 					</td>
 					<!--<td>String</td> -->
 					<td>""</td>
-					<td><p>This is a <em>italic</em> <code>String</code> <em>argument</em></p>
-</td>
+					<td>This is a <em>italic</em> <code>String</code> <em>argument</em></td>
 				</tr>
 					</tbody>
 				</table>
@@ -148,8 +142,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></p>
-</b><br />
+			<b>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></b><br />
 			
 		</p>
 		<p>
@@ -161,8 +154,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is an <code>double</code> argument with markdown formatted doc</p>
-</b><br />
+			<b>This is an <code>double</code> argument with markdown formatted doc</b><br />
 			
 		</p>
 		<p>
@@ -176,8 +168,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is an <code>int</code> argument with markdown formatted doc</p>
-</b><br />
+			<b>This is an <code>int</code> argument with markdown formatted doc</b><br />
 			
 		</p>
 		<p>
@@ -191,8 +182,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is a <em>italic</em> <code>String</code> <em>argument</em></p>
-</b><br />
+			<b>This is a <em>italic</em> <code>String</code> <em>argument</em></b><br />
 			
 		</p>
 		<p>
