--- a/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/HelpDoclet/org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html
@@ -67,16 +67,14 @@
 
 			<h1>MarkdownDocumentedFeature **BETA**</h1>
 
-		<p class="lead"><p>Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</p>
-</p>
+		<p class="lead">Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</p>
 
 			<h3>Category
 				<small> markdown</small>
 			</h3>
 		<hr>
 		<h2>Overview</h2>
-		<p>Documentation of this feature is written in Markdown and rendered as HTML.</p>
-
+		Documentation of this feature is written in Markdown and rendered as HTML.
 
 
 
