--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html
@@ -71,8 +71,7 @@
 
 			<h1>ClpWithMarkdownDocs **BETA**</h1>
 
-		<p class="lead"><p>Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
-</p>
+		<p class="lead">Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
 
 			<h3>Category
 				<small> markdown</small>
@@ -86,7 +85,6 @@
 <li>First element of list (<strong>bold</strong>)</li>
 <li>Second element of list (<em>italic</em>)</li>
 </ul>
-
 
 				<hr>
 				<h2>Command-line Arguments</h2>
@@ -112,8 +110,7 @@
 					</td>
 					<!--<td>String</td> -->
 					<td>""</td>
-					<td><p>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></p>
-</td>
+					<td>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></td>
 				</tr>
 				<tr>
 					<td><a href="#--DOUBLE">--DOUBLE</a><br />
@@ -121,8 +118,7 @@
 					</td>
 					<!--<td>double</td> -->
 					<td>0.0</td>
-					<td><p>This is an <code>double</code> argument with markdown formatted doc</p>
-</td>
+					<td>This is an <code>double</code> argument with markdown formatted doc</td>
 				</tr>
 				<tr>
 					<td><a href="#--INT">--INT</a><br />
@@ -130,8 +126,7 @@
 					</td>
 					<!--<td>int</td> -->
 					<td>0</td>
-					<td><p>This is an <code>int</code> argument with markdown formatted doc</p>
-</td>
+					<td>This is an <code>int</code> argument with markdown formatted doc</td>
 				</tr>
 				<tr>
 					<td><a href="#--italic">--italic</a><br />
@@ -139,8 +134,7 @@
 					</td>
 					<!--<td>String</td> -->
 					<td>""</td>
-					<td><p>This is a <em>italic</em> <code>String</code> <em>argument</em></p>
-</td>
+					<td>This is a <em>italic</em> <code>String</code> <em>argument</em></td>
 				</tr>
 					</tbody>
 				</table>
@@ -152,8 +146,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></p>
-</b><br />
+			<b>This is a <strong>bold</strong> <code>String</code> <strong>argument</strong></b><br />
 			
 		</p>
 		<p>
@@ -165,8 +158,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is an <code>double</code> argument with markdown formatted doc</p>
-</b><br />
+			<b>This is an <code>double</code> argument with markdown formatted doc</b><br />
 			
 		</p>
 		<p>
@@ -180,8 +172,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is an <code>int</code> argument with markdown formatted doc</p>
-</b><br />
+			<b>This is an <code>int</code> argument with markdown formatted doc</b><br />
 			
 		</p>
 		<p>
@@ -195,8 +186,7 @@
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>This is a <em>italic</em> <code>String</code> <em>argument</em></p>
-</b><br />
+			<b>This is a <em>italic</em> <code>String</code> <em>argument</em></b><br />
 			
 		</p>
 		<p>
