--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/index.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/index.html
@@ -26,8 +26,7 @@
         </div>
         <div class="accordion-body collapse" id="markdown">
             <div class="accordion-inner">
-                <p class="lead"><p><strong><em>Markdonw</em> Group Summary in bold</strong></p>
-</p>
+                <p class="lead"><strong><em>Markdonw</em> Group Summary in bold</strong></p>
                 <table class="table table-striped table-bordered table-condensed">
                     <tr>
                         <th>Name</th>
@@ -35,13 +34,11 @@
                     </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_ClpWithMarkdownDocs.html">ClpWithMarkdownDocs **BETA**</a></td>
-                                <td><p>Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</p>
-</td>
+                                <td>Tool where the documentation is formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a> <code>String</code>.</td>
                             </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_MarkdownDocumentedFeature.html">MarkdownDocumentedFeature **BETA**</a></td>
-                                <td><p>Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</p>
-</td>
+                                <td>Documented feature formatted with <a href="https://daringfireball.net/projects/markdown/">Markdown</a>.</td>
                             </tr>
                 </table>
             </div>
@@ -63,8 +60,7 @@
                     </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_TestExtraDocs.html">TestExtraDocs **BETA**</a></td>
-                                <td><p>Class for testing extraDocs property in docgen.</p>
-</td>
+                                <td>Class for testing extraDocs property in docgen.</td>
                             </tr>
                 </table>
             </div>
@@ -78,8 +74,7 @@
         </div>
         <div class="accordion-body collapse" id="Testfeaturegroupname">
             <div class="accordion-inner">
-                <p class="lead"><p>Test program group used for testing</p>
-</p>
+                <p class="lead">Test program group used for testing</p>
                 <table class="table table-striped table-bordered table-condensed">
                     <tr>
                         <th>Name</th>
@@ -87,8 +82,7 @@
                     </tr>
                             <tr>
                                     <td><a href="org_broadinstitute_barclay_help_TestArgumentContainer.html">TestArgumentContainer **BETA**</a></td>
-                                <td><p>Argument container class for testing documentation generation.</p>
-</td>
+                                <td>Argument container class for testing documentation generation.</td>
                             </tr>
                 </table>
             </div>
