--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_TestArgumentContainer.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_TestArgumentContainer.html
@@ -71,8 +71,7 @@
 
 			<h1>TestArgumentContainer **BETA**</h1>
 
-		<p class="lead"><p>Argument container class for testing documentation generation.</p>
-</p>
+		<p class="lead">Argument container class for testing documentation generation.</p>
 
 			<h3>Category
 				<small> Test feature group name</small>
@@ -82,15 +81,13 @@
 		<p>Argument container class for testing documentation generation. Contains an argument
 for each @Argument, @ArgumentCollection, and @DocumentedFeature property that should
 be tested.</p>
-<p>Test custom tag:</p>
- <p>
+<p>Test custom tag:</p> <p>
  The purpose of this paragraph is to test embedded html formatting.
  <ol>
      <li>This is point number 1</li>
      <li>This is point number 2</li>
  </ol>
  </p>
-
 
 				<hr>
 				<h2>Additional Information</h2>
@@ -128,8 +125,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>NA</td>
-					<td><p>Positional arguments, min = 2, max = 2</p>
-</td>
+					<td>Positional arguments, min = 2, max = 2</td>
 				</tr>
 			<tr>
 				<th colspan="4" id="row-divider">Required Arguments</th>
@@ -139,8 +135,7 @@ be tested.</p>
 					</td>
 					<!--<td>TestEnum</td> -->
 					<td>null</td>
-					<td><p>Required Clp enum</p>
-</td>
+					<td>Required Clp enum</td>
 				</tr>
 				<tr>
 					<td><a href="#--requiredFileList">--requiredFileList</a><br />
@@ -148,8 +143,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>Required file list</p>
-</td>
+					<td>Required file list</td>
 				</tr>
 				<tr>
 					<td><a href="#--requiredInputFilesFromArgCollection">--requiredInputFilesFromArgCollection</a><br />
@@ -157,16 +151,14 @@ be tested.</p>
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>Required input files from argument collection</p>
-</td>
+					<td>Required input files from argument collection</td>
 				</tr>
 				<tr>
 					<td><a href="#--requiredStringInputFromArgCollection">--requiredStringInputFromArgCollection</a><br />
 					</td>
 					<!--<td>String</td> -->
 					<td>null</td>
-					<td><p>Required string input from argument collection</p>
-</td>
+					<td>Required string input from argument collection</td>
 				</tr>
 				<tr>
 					<td><a href="#--requiredStringList">--requiredStringList</a><br />
@@ -174,8 +166,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[String]</td> -->
 					<td>[]</td>
-					<td><p>A required list of strings</p>
-</td>
+					<td>A required list of strings</td>
 				</tr>
 				<tr>
 					<td><a href="#--usesFieldNameForArgName">--usesFieldNameForArgName</a><br />
@@ -183,8 +174,7 @@ be tested.</p>
 					</td>
 					<!--<td>String</td> -->
 					<td>null</td>
-					<td><p>Use field name if no name in annotation.</p>
-</td>
+					<td>Use field name if no name in annotation.</td>
 				</tr>
 			<tr>
 				<th colspan="4" id="row-divider">Optional Tool Arguments</th>
@@ -194,32 +184,28 @@ be tested.</p>
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>Undocumented option</p>
-</td>
+					<td>Undocumented option</td>
 				</tr>
 				<tr>
 					<td><a href="#--mutexTargetField1">--mutexTargetField1</a><br />
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>SAM/BAM/CRAM file(s) with alignment data from the first read of a pair.</p>
-</td>
+					<td>SAM/BAM/CRAM file(s) with alignment data from the first read of a pair.</td>
 				</tr>
 				<tr>
 					<td><a href="#--mutexTargetField2">--mutexTargetField2</a><br />
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>SAM/BAM file(s) with alignment data from the second read of a pair.</p>
-</td>
+					<td>SAM/BAM file(s) with alignment data from the second read of a pair.</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalClpEnum">--optionalClpEnum</a><br />
 					</td>
 					<!--<td>TestEnum</td> -->
 					<td>ENUM_VALUE_1</td>
-					<td><p>Optional Clp enum</p>
-</td>
+					<td>Optional Clp enum</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalDouble">--optionalDouble</a><br />
@@ -227,8 +213,7 @@ be tested.</p>
 					</td>
 					<!--<td>double</td> -->
 					<td>2.15</td>
-					<td><p>Optionals double with initial value 2.15</p>
-</td>
+					<td>Optionals double with initial value 2.15</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalDoubleList">--optionalDoubleList</a><br />
@@ -236,8 +221,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[Double]</td> -->
 					<td>[100.0, 99.9, 99.0, 90.0]</td>
-					<td><p>optionalDoubleList with initial values: 100.0, 99.9, 99.0, 90.0</p>
-</td>
+					<td>optionalDoubleList with initial values: 100.0, 99.9, 99.0, 90.0</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalFileList">--optionalFileList</a><br />
@@ -245,8 +229,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>Optional file list</p>
-</td>
+					<td>Optional file list</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalFlag">--optionalFlag</a><br />
@@ -254,24 +237,21 @@ be tested.</p>
 					</td>
 					<!--<td>boolean</td> -->
 					<td>false</td>
-					<td><p>Optional flag, defaults to false.</p>
-</td>
+					<td>Optional flag, defaults to false.</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalInputFilesFromArgCollection">--optionalInputFilesFromArgCollection</a><br />
 					</td>
 					<!--<td>List[File]</td> -->
 					<td>[]</td>
-					<td><p>Optional input files from argument collection</p>
-</td>
+					<td>Optional input files from argument collection</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalStringInputFromArgCollection">--optionalStringInputFromArgCollection</a><br />
 					</td>
 					<!--<td>String</td> -->
 					<td>null</td>
-					<td><p>Optional string input from argument collection</p>
-</td>
+					<td>Optional string input from argument collection</td>
 				</tr>
 				<tr>
 					<td><a href="#--optionalStringList">--optionalStringList</a><br />
@@ -279,8 +259,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[String]</td> -->
 					<td>[]</td>
-					<td><p>An optional list of strings</p>
-</td>
+					<td>An optional list of strings</td>
 				</tr>
 				<tr>
 					<td><a href="#--testPlugin">--testPlugin</a><br />
@@ -288,8 +267,7 @@ be tested.</p>
 					</td>
 					<!--<td>List[String]</td> -->
 					<td>[]</td>
-					<td><p>Undocumented option</p>
-</td>
+					<td>Undocumented option</td>
 				</tr>
 			<tr>
 				<th colspan="4" id="row-divider">Advanced Arguments</th>
@@ -300,8 +278,7 @@ be tested.</p>
 					</td>
 					<!--<td>int</td> -->
 					<td>1</td>
-					<td><p>advancedOptionalInt with initial value 1</p>
-</td>
+					<td>advancedOptionalInt with initial value 1</td>
 				</tr>
 			<tr>
 				<th colspan="4" id="row-divider">Deprecated Arguments</th>
@@ -312,8 +289,7 @@ be tested.</p>
 					</td>
 					<!--<td>int</td> -->
 					<td>0</td>
-					<td><p>deprecated</p>
-</td>
+					<td>deprecated</td>
 				</tr>
 					</tbody>
 				</table>
@@ -325,10 +301,8 @@ be tested.</p>
 			 / <small>NA</small>
 		</h3>
 		<p class="args">
-			<b><p>Positional arguments, min = 2, max = 2</p>
-</b><br />
-			<p>Positional arguments, min = 2, max = 2</p>
-
+			<b>Positional arguments, min = 2, max = 2</b><br />
+			Positional arguments, min = 2, max = 2
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
@@ -340,10 +314,8 @@ be tested.</p>
 			 / <small>-advancedOptInt</small>
 		</h3>
 		<p class="args">
-			<b><p>advancedOptionalInt with initial value 1</p>
-</b><br />
-			<p>Advanced, Optional int</p>
-
+			<b>advancedOptionalInt with initial value 1</b><br />
+			Advanced, Optional int
 		</p>
 		<p>
 			<span class="label label-info ">int</span>
@@ -356,10 +328,8 @@ be tested.</p>
 			 / <small>-depStr</small>
 		</h3>
 		<p class="args">
-			<b><p>deprecated</p>
-</b><br />
-			<p>Deprecated string</p>
-
+			<b>deprecated</b><br />
+			Deprecated string
 		</p>
 		<p>
 			<span class="label label-info ">int</span>
@@ -372,10 +342,8 @@ be tested.</p>
 			 / <small>-mutexArg</small>
 		</h3>
 		<p class="args">
-			<b><p>Undocumented option</p>
-</b><br />
-			<p>Mutually exclusive args</p>
-
+			<b>Undocumented option</b><br />
+			Mutually exclusive args
 		</p>
 			<p><b>Exclusion:</b> This argument cannot be used at the same time as <code>READ1_ALIGNED_BAM, READ2_ALIGNED_BAM</code>.</p>
 		<p>
@@ -387,8 +355,7 @@ be tested.</p>
 			 / <small>-mutexTargetField1</small>
 		</h3>
 		<p class="args">
-			<b><p>SAM/BAM/CRAM file(s) with alignment data from the first read of a pair.</p>
-</b><br />
+			<b>SAM/BAM/CRAM file(s) with alignment data from the first read of a pair.</b><br />
 			
 		</p>
 			<p><b>Exclusion:</b> This argument cannot be used at the same time as <code>mutexSourceField</code>.</p>
@@ -401,8 +368,7 @@ be tested.</p>
 			 / <small>-mutexTargetField2</small>
 		</h3>
 		<p class="args">
-			<b><p>SAM/BAM file(s) with alignment data from the second read of a pair.</p>
-</b><br />
+			<b>SAM/BAM file(s) with alignment data from the second read of a pair.</b><br />
 			
 		</p>
 			<p><b>Exclusion:</b> This argument cannot be used at the same time as <code>mutexSourceField</code>.</p>
@@ -415,8 +381,7 @@ be tested.</p>
 			 / <small>-optionalClpEnum</small>
 		</h3>
 		<p class="args">
-			<b><p>Optional Clp enum</p>
-</b><br />
+			<b>Optional Clp enum</b><br />
 			
 		</p>
 			<p>
@@ -437,10 +402,8 @@ be tested.</p>
 			 / <small>-optDouble</small>
 		</h3>
 		<p class="args">
-			<b><p>Optionals double with initial value 2.15</p>
-</b><br />
-			<p>Required double</p>
-
+			<b>Optionals double with initial value 2.15</b><br />
+			Required double
 		</p>
 		<p>
 			<span class="label label-info ">double</span>
@@ -453,10 +416,8 @@ be tested.</p>
 			 / <small>-optDoubleList</small>
 		</h3>
 		<p class="args">
-			<b><p>optionalDoubleList with initial values: 100.0, 99.9, 99.0, 90.0</p>
-</b><br />
-			<p>Optional double list.</p>
-
+			<b>optionalDoubleList with initial values: 100.0, 99.9, 99.0, 90.0</b><br />
+			Optional double list.
 		</p>
 		<p>
 			<span class="label label-info ">List[Double]</span>
@@ -467,10 +428,8 @@ be tested.</p>
 			 / <small>-optFilList</small>
 		</h3>
 		<p class="args">
-			<b><p>Optional file list</p>
-</b><br />
-			<p>Optional file list.</p>
-
+			<b>Optional file list</b><br />
+			Optional file list.
 		</p>
 		<p>
 			<span class="label label-info ">List[File]</span>
@@ -481,10 +440,8 @@ be tested.</p>
 			 / <small>-optFlag</small>
 		</h3>
 		<p class="args">
-			<b><p>Optional flag, defaults to false.</p>
-</b><br />
-			<p>Optional flag.</p>
-
+			<b>Optional flag, defaults to false.</b><br />
+			Optional flag.
 		</p>
 		<p>
 			<span class="label label-info ">boolean</span>
@@ -495,8 +452,7 @@ be tested.</p>
 			 / <small>-optionalInputFilesFromArgCollection</small>
 		</h3>
 		<p class="args">
-			<b><p>Optional input files from argument collection</p>
-</b><br />
+			<b>Optional input files from argument collection</b><br />
 			
 		</p>
 		<p>
@@ -508,8 +464,7 @@ be tested.</p>
 			 / <small>-optionalStringInputFromArgCollection</small>
 		</h3>
 		<p class="args">
-			<b><p>Optional string input from argument collection</p>
-</b><br />
+			<b>Optional string input from argument collection</b><br />
 			
 		</p>
 		<p>
@@ -521,10 +476,8 @@ be tested.</p>
 			 / <small>-optStrList</small>
 		</h3>
 		<p class="args">
-			<b><p>An optional list of strings</p>
-</b><br />
-			<p>Optional string list.</p>
-
+			<b>An optional list of strings</b><br />
+			Optional string list.
 		</p>
 		<p>
 			<span class="label label-info ">List[String]</span>
@@ -535,8 +488,7 @@ be tested.</p>
 			 / <small>-requiredClpEnum</small>
 		</h3>
 		<p class="args">
-			<b><p>Required Clp enum</p>
-</b><br />
+			<b>Required Clp enum</b><br />
 			
 		</p>
 			<p>
@@ -558,10 +510,8 @@ be tested.</p>
 			 / <small>-reqFilList</small>
 		</h3>
 		<p class="args">
-			<b><p>Required file list</p>
-</b><br />
-			<p>Required file list.</p>
-
+			<b>Required file list</b><br />
+			Required file list.
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
@@ -573,8 +523,7 @@ be tested.</p>
 			 / <small>-rRequiredInputFilesFromArgCollection</small>
 		</h3>
 		<p class="args">
-			<b><p>Required input files from argument collection</p>
-</b><br />
+			<b>Required input files from argument collection</b><br />
 			
 		</p>
 		<p>
@@ -587,8 +536,7 @@ be tested.</p>
 			 / <small>-requiredStringInputFromArgCollection</small>
 		</h3>
 		<p class="args">
-			<b><p>Required string input from argument collection</p>
-</b><br />
+			<b>Required string input from argument collection</b><br />
 			
 		</p>
 		<p>
@@ -601,10 +549,8 @@ be tested.</p>
 			 / <small>-reqStrList</small>
 		</h3>
 		<p class="args">
-			<b><p>A required list of strings</p>
-</b><br />
-			<p>Required string list.</p>
-
+			<b>A required list of strings</b><br />
+			Required string list.
 		</p>
 		<p>
 				<span class="badge badge-important">R</span>
@@ -616,8 +562,7 @@ be tested.</p>
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>Undocumented option</p>
-</b><br />
+			<b>Undocumented option</b><br />
 			
 		</p>
 		<p>
@@ -629,8 +574,7 @@ be tested.</p>
 			 / <small>-</small>
 		</h3>
 		<p class="args">
-			<b><p>Use field name if no name in annotation.</p>
-</b><br />
+			<b>Use field name if no name in annotation.</b><br />
 			
 		</p>
 		<p>
