--- a/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_TestExtraDocs.html
+++ b/src/test/resources/org/broadinstitute/barclay/help/expected/TestDoclet/org_broadinstitute_barclay_help_TestExtraDocs.html
@@ -71,16 +71,14 @@
 
 			<h1>TestExtraDocs **BETA**</h1>
 
-		<p class="lead"><p>Class for testing extraDocs property in docgen.</p>
-</p>
+		<p class="lead">Class for testing extraDocs property in docgen.</p>
 
 			<h3>Category
 				<small> Test extra docs group name</small>
 			</h3>
 		<hr>
 		<h2>Overview</h2>
-		<p>Class for testing extraDocs property in docgen.</p>
-
+		Class for testing extraDocs property in docgen.
 
 
 
